tests/sfzs/bad/03_missing_samples/root.sfz
// Missing samples
// Copyright 2006, Leon Dionne

<group>
lokey=36					// assert-NoneType
hikey=48					// assert-NoneType

<region>
hivel=63					// assert-NoneType
sample=samples/sample_1.wav	// assert-NotFoundError

<region>
lovel=64					// assert-NoneType
hivel=80					// assert-NoneType
sample=samples/sample_2.wav	// assert-NotFoundError

<region>
lovel=80
sample=samples/sample_3.wav	// assert-NotFoundError


